--- a/Web/templates/gauge.html
+++ b/Web/templates/gauge.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://d3js.org/d3.v3.min.js" language="JavaScript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+                integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+                crossorigin="anonymous"></script>
     <script type="text/javascript" charset="utf-8">
       var socket = io();
       socket.on('connect', function() {
@@ -15,7 +18,6 @@
           gauge1.update(msg.data)
         }
       });
-
 
       function sendMessage(message) {
         socket.emit('json', {data: NewValue()});
