Moved language tag to top of document (instead of inside head)

--- a/Web2/templates/gauge.html
+++ b/Web2/templates/gauge.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <title></title>
     <script src="https://d3js.org/d3.v3.min.js" language="JavaScript"></script>
