playing around with a bar chart

--- a/Web2/templates/distance.html
+++ b/Web2/templates/distance.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font: 16px arial;
-            background-color: #515151;
+            background-color: #000000;
         }
 
         .unselectable {
@@ -45,14 +45,14 @@
         .gauge .major {
             fill: #fff;
             font-size: 20px;
-            font-family: 'Play', verdana, sans-serif;
+            font-family: 'Play', times, sans-serif;
             font-weight: normal;
         }
 
         .gauge .indicator {
             stroke: #EE3311;
             fill: #000;
-            stroke-width: 4px;
+            stroke-width: 6px;
         }
 
         /* css formats for the segment display */
