--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -9,7 +9,8 @@
             if (width >= 100) {
               clearInterval(id);
             } else {
-              elem.style.width = width + '%';
+              elem.style.width = width;
+              // + '%';
             }
           }
         }
