--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -1,9 +1,27 @@
 <html>
     <head>
-      <script type="text/javascript">
+      <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+                  integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+                  crossorigin="anonymous"></script>
+      <script type="text/javascript" charset="utf-8">
+        var socket = io();
+        socket.on('connect', function() {
+          // socket.emit('json', {data: 'I\'m connected!'});
+        });
+
+        socket.on('json', function(msg, cb) {
+          if (msg.distance !== undefined) {
+            document.getElementById("myBar").with = msg.distance;
+          }
+        });
+
+        // function sendMessage(message) {
+        //   socket.emit('json', {data: NewValue()});
+        // }
+
         function move() {
           var elem = document.getElementById("myBar");
-          var width = {{ distBar }}
+          var width = {{ distBar }};
           var id = setInterval(frame, 10);
           function frame() {
             if (width >= 100) {
