Added socket.on distance to html

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -15,6 +15,14 @@
           }
         });
 
+        socket.on('distance', function(msg, cb) {
+          if (msg.distance !== undefined) {
+            console.log(msg);
+            document.getElementById("myBar").with = msg.distance;
+          }
+        });
+
+
         // function sendMessage(message) {
         //   socket.emit('json', {data: NewValue()});
         // }
