added double quotes

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -19,7 +19,7 @@
 
           console.log(dist_obj);
             console.log(dist_obj.distance);
-              console.log(dist_obj['distance']);
+              console.log(dist_obj["distance"]);
 
           if (json.distance !== undefined) {
             document.getElementById("myBar").with = json.distance;
