added json.distance console log

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -17,10 +17,8 @@
 
         socket.on('distance', function(dist_obj) {
           const json = JSON.parse(dist_obj);
-          console.log(dist_obj);
-            console.log(dist_obj.distance);
-              console.log(dist_obj["distance"]);
-                console.log(json);
+          console.log(json);
+          console.log(json.distance);
 
           if (json.distance !== undefined) {
             document.getElementById("myBar").with = json.distance;
