edited {{distBar}} to {{json.distance}}

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -32,7 +32,7 @@
 
         function move() {
           var elem = document.getElementById("myBar");
-          var width = {{ distBar }};
+          var width = {{ json.distance }};
           var id = setInterval(frame, 10);
           function frame() {
             if (width >= 100) {
