added console log

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -22,6 +22,7 @@
 
           if (json.distance !== undefined) {
             var barWidth = parseFloat(json.distance);
+            console.log(barWidth);
              document.getElementById("myBar").width = barWidth;
           }
         });
