added width var

--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -34,6 +34,7 @@
 
         function move() {
           var elem = document.getElementById("myBar");
+          var width = 0;
           var id = setInterval(frame, 10);
           function frame() {
             if (barWidth >= 100) {
