--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -38,7 +38,7 @@
               if (barWidth >= 100) {
                 clearInterval(id);
               } else {
-                elem.style.width = barWidth;
+                elem.style.width = barWidth + '%';
                 if ((barWidth > 0) && (barWidth < 35)){
                   elem.style.backgroundColor = "red";
                 }
