--- a/DistanceWeb/templates/distanceVis.html
+++ b/DistanceWeb/templates/distanceVis.html
@@ -3,13 +3,14 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
                   integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
                   crossorigin="anonymous"></script>
-        <title>Our App</title>
+        <title>My Distance Tracker</title>
         <link rel="stylesheet" type="text/css"
               href="{{ url_for('static', filename='css/style.css') }}">
     </head>
 
     <body>
-        <h1>Welcome to our application!</h1>
+        <h1>My Distance Tracker</h1>
+        <h3>Try to reach 100m!</h2>
         <div id="myProgress">
           <div id="myBar"></div>
         </div>
