--- a/Web3/templates/test.html
+++ b/Web3/templates/test.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-        <h1> My Workout Dashboard </h1>
+        <h1> My Workout </h1>
 
-        <p> Track your workout </p>
+        <p> Speed </p>
 
         <!-- <div id="myCircle"></div>
         <div id="myCircle2"></div>
@@ -18,21 +18,23 @@
 <div id="whole">
 
         <div id="j">
-            <span class="value1"> 0 </span>
+             <span id="span1">3:05</span>
         </div>
 
-        <div id="logo">	<span class="speedometer"></span>
-            <span class="needle"></span>
+        <div id="center">
+          <span id="span3">2.8</span>
+            <div id="logo">
+              <span class="speedometer"></span>
+              <span class="needle"></span>
+            </div>
         </div>
 
         <div id="h">
-            <span class="value2"> 0 </span>
+            <span id="span2">5.2</span>
         </div>
 
 </div>
-
-        <!-- <div id="h"> <div class="header"></div>
+    <!-- <div id="h"> <div class="header"></div>
         </div> -->
-
   </body>
 </html>
