--- a/Web3/templates/test.html
+++ b/Web3/templates/test.html
@@ -9,20 +9,25 @@
   <body>
         <h1> My Workout </h1>
 
-        <p> Speed </p>
-
-        <!-- <div id="myCircle"></div>
-        <div id="myCircle2"></div>
-        <div id="myCircle3"></div> -->
-
 <div id="whole">
 
         <div id="j">
-             <span id="span1">3:05</span>
+             <div class="span1">
+              03:05
+              <div class="span4">
+                         min:sec
+                      </div>
+             </div>
         </div>
 
         <div id="center">
-          <span id="span3">2.8</span>
+          <div class="span3">
+            2.8         <div class="span4">
+                       km/h
+                    </div>
+         </div>
+
+
             <div id="logo">
               <span class="speedometer"></span>
               <span class="needle"></span>
@@ -30,7 +35,9 @@
         </div>
 
         <div id="h">
-            <span id="span2">5.2</span>
+            <div class="span2">5.2  <div class="span4">
+                         km/h
+                      </div></div>
         </div>
 
 </div>
