--- a/Web3/static/css/style2.css
+++ b/Web3/static/css/style2.css
@@ -23,14 +23,25 @@ h1 {
   display: inline-block;
   text-align: center;
 }
-
-#span3{
+/* text below the middle speedometer - should be dependent on socket data */
+.span3{
    color: purple;
    font-family:Arial, Helvetica, sans-serif;
    font-size: 36px;
    display: inline-block;
-   -webkit-transform: rotate(-45deg);
    position: absolute;
+   text-align: center;
+   left:48%;
+   top:200px;
+}
+/* "km/h" text below the middle speedometer*/
+.span4{
+   color: purple;
+   font-family:Arial, Helvetica, sans-serif;
+   font-size: 12px;
+   display: inline-block;
+   position: absolute;
+   text-align: center;
 }
 
 #logo {
@@ -40,12 +51,12 @@ h1 {
 }
 
 #logo .speedometer {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   border-radius: 100%;
   border: 20px solid purple;
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
+  border-right: 20px solid lightblue;
+  border-bottom: 20px solid lightblue;
   -webkit-transform: rotate(45deg);
   display: inline-block;
   text-align: left;
@@ -53,16 +64,16 @@ h1 {
 
 #logo .needle {
   width: 10px;
-  height: 90px;
+  height: 100px;
   background: #999999;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
   display: inline-block;
-  left: 90px;
+  left: 115px;
   position: absolute;
-  top: 10px;
+  top: 15px;
   -webkit-animation: move 5s infinite;
   transform: rotate(45deg);
   transform-origin: bottom;
@@ -75,22 +86,23 @@ h1 {
   height: 100px;
   border-radius: 100%;
   border: 20px solid pink;
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
+  border-right: 20px solid pink;
+  border-bottom: 20px solid pink;
   -webkit-transform: rotate(45deg);
   display: inline-block;
   text-align: center;
 }
 
-#span1{
-   color: pink;
+.span1{
+   color: red;
    font-family:Arial, Helvetica, sans-serif;
-   font-size: 36px;
+   font-size: 24px;
    position: absolute;
    top: 20px;
    left: 20px;
    display: inline-block;
    -webkit-transform: rotate(-45deg);
+  text-align: center;
 }
 
 /* right circle: distance */
@@ -100,22 +112,23 @@ h1 {
   height: 100px;
   border-radius: 100%;
   border: 20px solid lightgreen;
-  border-right: 20px solid white;
-  border-bottom: 20px solid white;
+  border-right: 20px solid lightgreen;
+  border-bottom: 20px solid lightgreen;
   -webkit-transform: rotate(45deg);
   display: inline-block;
   text-align: center;
 }
 
-#span2{
+.span2{
   color: green;
   font-family:Arial, Helvetica, sans-serif;
-  font-size: 36px;
+  font-size: 24px;
   position: absolute;
   top: 20px;
   left: 20px;
   display: inline-block;
   -webkit-transform: rotate(-45deg);
+     text-align: center;
 }
 
 @-webkit-keyframes move {
