--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -28,10 +28,11 @@
               var elem = document.getElementById("span2").innerHTML;
               elem = totalDis;
             }
+            window.onload = displayDis();
         </script>
     </head>
 
-    <body onload="displayDis()">
+    <body>
         <h1>My Workout Tracker</h1>
         <p> Speed </p>
 
