--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -26,7 +26,7 @@
 
             function displayDis() {
               var elem = document.getElementById("span2").innerHTML;
-              elem = totalDis;
+              elem = document.write(totalDis);
             }
             window.onload = displayDis();
         </script>
