--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -25,7 +25,7 @@
               });
 
             function displayDis() {
-              var elem = document.getElementById("span2").innerHTML;
+              var elem = document.getElementById("span2");
               elem = document.write(totalDis);
             }
             window.onload = displayDis();
