--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -23,12 +23,6 @@
                   console.log(totalDis);
                   }
               });
-
-            function displayDis() {
-              var elem = document.getElementById("span2");
-              elem = document.write(totalDis);
-            }
-            window.onload = displayDis();
         </script>
     </head>
 
@@ -55,7 +49,11 @@
           </div>
 
           <div id="h">
-              <span id="span2"></span>
+              <span id="span2">
+                <script type="text/javascript">
+                  document.write(totalDis)
+                </script>
+              </span>
           </div>
 
         </div>
