--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -8,7 +8,7 @@
                   crossorigin="anonymous"></script>
       <script type="text/javascript" charset="utf-8">
           var socket = io();
-          var totalDis = 0;
+          var totalDis;
           socket.on('connect', function() {
             // socket.emit('json', {data: 'I\'m connected!'});
           });
