--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -56,7 +56,7 @@
             function setDistance(){
               var elem = document.getElementById("span2");
               const disDisplay = totalDis;
-              elem.innerHTML.replace(disDisplay);
+              elem.innerHTML = disDisplay;
             }
             window.onload = setDistance();
           </script>
