try setDistance(totalDis) (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -53,10 +53,9 @@
                     console.log(totalDis);
                     }
                 });
-            function setDistance(){
+            function setDistance(totalDis){
               var elem = document.getElementById("span2");
-              const disDisplay = totalDis;
-              elem.innerHTML = disDisplay;
+              elem.innerHTML = totalDis;
             }
             window.onload = setDistance();
           </script>
