--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -55,7 +55,7 @@
                 });
             function setDistance(totalDis){
               var elem = document.getElementById("span2");
-              elem.innerHTML = totalDis;
+              elem.innerHTML = "totalDis";
             }
             window.onload = setDistance();
           </script>
