try toString() (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -46,13 +46,14 @@
 
             socket.on('distance', function(dist_obj) {
                 const json = JSON.parse(dist_obj);
-                disDisplay = JSON.stringify(dist_obj);
                 console.log(json);
-                console.log(json.distance);
-                console.log(disDisplay);
+                //console.log(json.distance);
 
                 if (json.distance !== undefined) {
                     totalDis = parseFloat(json.distance);
+                    disDisplay = totalDis.toString();
+                    console.log(totalDis);
+                    console.log(disDisplay);
                     }
                 });
             function setDistance(){
