moved disDisplay var (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -39,7 +39,6 @@
         <script type="text/javascript" charset="utf-8">
             var socket = io();
             var totalDis = 0;
-            var disDisplay;
             socket.on('connect', function() {
               // socket.emit('json', {data: 'I\'m connected!'});
             });
@@ -51,7 +50,7 @@
 
                 if (json.distance !== undefined) {
                     totalDis = parseFloat(json.distance);
-                    disDisplay = totalDis.toString();
+                    var disDisplay = totalDis.toString();
                     console.log(totalDis);
                     console.log(disDisplay);
                     }
