--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -55,7 +55,7 @@
                     console.log(disDisplay);
                     }
                 });
-            function setDistance(){
+            function setDistance(disDisplay){
               var elem = document.getElementById("span2");
               elem.innerHTML = disDisplay;
             }
