--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -58,7 +58,7 @@
                 });
             function setDistance(){
               var elem = document.getElementById("span2");
-              elem.innerHTML = hello;
+              elem.innerHTML = "hello";
             }
             window.onload = setDistance();
           </script>
