--- a/Web3/templates/test.html
+++ b/Web3/templates/test.html
@@ -9,22 +9,25 @@
   <body>
         <h1> My Workout </h1>
 
-<div id="whole">
+<div id="whole", class="span">
 
         <div id="j">
              <div class="span1">
               03:05
-              <div class="span4">
-                         min:sec
-                      </div>
+              <br />
+                <div class="span5">
+                min:sec
+                </div>
              </div>
         </div>
 
         <div id="center">
           <div class="span3">
-            2.8         <div class="span4">
-                       km/h
-                    </div>
+            2.8
+            <br />
+            <div class="span6">
+            km/h
+            </div>
          </div>
 
 
@@ -35,8 +38,11 @@
         </div>
 
         <div id="h">
-            <div class="span2">5.2  <div class="span4">
-                         km/h
+            <div class="span2">
+              5.2
+              <br />
+              <div class="span4">
+                         meters
                       </div></div>
         </div>
 
