removed span4 (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -41,10 +41,7 @@
 
       <div id="h">
           <div class="span2">
-            <br>
-            <div class="span4">
-                       meters
-                    </div></div>
+            </div>
       </div>
 
     </div>
